--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,15 @@ node_js:
 branches:
   only:
   - master
-
+cache:
+  directories:
+    - node_modules
 before_install:
-
-- openssl ase-256-cbc -K $encrypted_dbde745e8e2f_key -iv $encrypted_dbde745e8e2f_iv -in .travis/travis-ci.enc -out ~/.ssh/travis-ci -d
+- openssl ase-256-cbc -K $encrypted_dbde745e8e2f_key -iv $encrypted_dbde745e8e2f_iv -in .travis/travis-ci.enc -out .travis/travis-ci -d
+- cp .travis/travis-ci ~/.ssh/travis-ci
 - chmod 600 ~/.ssh/travis-ci
 - eval $(ssh-agent)
-- ssh -add ~/.ssh/travis-ci
+- ssh-add ~/.ssh/travis-ci
 - cp .travis/ssh_config ~/.ssh/config
 - git config --global user.name "zhio"
 - git config --global user.email 1406816741@qq.com
@@ -22,4 +24,4 @@ install:
 - npm install
  
 script:
-- npm run deploy
+- cross-env YOQUE_TOKEN=$yuque_token npm run deploy
