--- a/package.json
+++ b/package.json
@@ -5,6 +5,26 @@
   "hexo": {
     "version": "3.9.0"
   },
+  "yuqueConfig": {
+    "postPath": "source/_posts/yuque",
+    "cachePath": "yuque.json",
+    "mdNameFormat": "title",
+    "adapter": "hexo",
+    "concurrency": 5,
+    "baseUrl": "https://www.yuque.com/api/v2",
+    "login": "gpfer",
+    "repo": "blog",
+    "onlyPublished": false
+  },
+  "scripts": {
+    "clean": "hexo clean",
+    "clean:yuque": "yuque-hexo clean",
+    "deploy": "npm run sync && hexo deploy",
+    "publish": "npm run clean && npm run deploy",
+    "dev": "hexo s",
+    "sync": "yuque-hexo sync",
+    "reset": "npm run clean:yuque && npm run sync"
+  },
   "dependencies": {
     "core-js": "^3.1.4",
     "eslint": "^4.19.1",
@@ -19,5 +39,8 @@
     "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3"
+  },
+  "devDependencies": {
+    "yuque-hexo": "^1.6.1"
   }
 }
