--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
   directories:
     - node_modules
 before_install:
-- openssl ase-256-cbc -K $encrypted_dbde745e8e2f_key -iv $encrypted_dbde745e8e2f_iv -in .travis/travis-ci.enc -out .travis/travis-ci -d
+- openssl aes-256-cbc -K $encrypted_dbde745e8e2f_key -iv $encrypted_dbde745e8e2f_iv -in .travis/travis-ci.enc -out .travis/travis-ci -d
 - cp .travis/travis-ci ~/.ssh/travis-ci
 - chmod 600 ~/.ssh/travis-ci
 - eval $(ssh-agent)
@@ -24,4 +24,4 @@ install:
 - npm install
  
 script:
-- cross-env YOQUE_TOKEN=$yuque_token npm run deploy
+- npm run deploy
