--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ cache:
   directories:
   - node_modules
 before_install:
-- openssl aes-256-cbc -K $encrypted_dbde745e8e2f_key -iv $encrypted_dbde745e8e2f_iv
-  -in id_rsa.enc -out id_rsa -d
+- openssl aes-256-cbc -K $encrypted_dbde745e8e2f_key -iv $encrypted_dbde745e8e2f_iv -in .travis/id_rsa.enc -out .travis/id_rsa -d
 - cp .travis/id_rsa ~/.ssh/id-rsa
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
