--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
   - node_modules
 before_install:
 - openssl aes-256-cbc -K $encrypted_dbde745e8e2f_key -iv $encrypted_dbde745e8e2f_iv -in .travis/id_rsa.enc -out .travis/id_rsa -d
-- cp .travis/id_rsa ~/.ssh/id-rsa
+- cp .travis/id_rsa  ~/.ssh/id_rsa
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
