--- a/themes/ocean/_config.yml
+++ b/themes/ocean/_config.yml
@@ -60,5 +60,4 @@ gitalk:
   clientSecret: 249c25197ec4f94aa960aa2ba0a94b5fdc928439 # Client Secret
   repo: gitalk # Repository name
   owner: zhio # GitHub ID
-  
-min: zhio # GitHub ID
+  admin: zhio # GitHub ID
