--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "baseUrl": "https://www.yuque.com/api/v2",
     "login": "gpfer",
     "repo": "blog",
-    "onlyPublished": false
+    "onlyPublished": false,
+    "onlyPublic": false
   },
   "scripts": {
     "clean": "hexo clean",
@@ -22,7 +23,7 @@
     "deploy": "npm run sync && hexo deploy",
     "publish": "npm run clean && npm run deploy",
     "dev": "hexo s",
-    "sync": "yuque-hexo sync",
+    "sync": "YUQUE_TOKEN=hXeqPHP1jzYLbz2l0Qx5yBt9Il0GzMRC10OBGQf6 yuque-hexo sync",
     "reset": "npm run clean:yuque && npm run sync"
   },
   "dependencies": {
