--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "deploy": "npm run sync && hexo deploy",
     "publish": "npm run clean && npm run deploy",
     "dev": "hexo s",
-    "sync": "YUQUE_TOKEN=hXeqPHP1jzYLbz2l0Qx5yBt9Il0GzMRC10OBGQf6 yuque-hexo sync",
+    "sync": "yuque-hexo sync",
     "reset": "npm run clean:yuque && npm run sync"
   },
   "dependencies": {
