--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - cp .travis/ssh_config ~/.ssh/config
-- ssh-add -K ~/.ssh/id_rsa
+- ssh-add -k ~/.ssh/id_rsa
 - git config --global user.name "zhio"
 - git config --global user.email 1406816741@qq.com
 install:
