--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache:
   directories:
   - node_modules
 before_install:
+- openssl aes-256-cbc -K $encrypted_83cbab1bbca1_key -iv $encrypted_83cbab1bbca1_iv
+  -in id_rsa.enc -out .travis/id_rsa -d
 - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv
   -in .travis/id_rsa.enc -out .travis/id_rsa -d
 - cp .travis/id_rsa  ~/.ssh/id_rsa
