--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ cache:
   - node_modules
 before_install:
 - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv
-  -in .travis/id_rsa.enc -out .travis/id_rsa -d
-- cp .travis/id_rsa  ~/.ssh/id_rsa
+  -in .travis/travis_id_rsa.enc -out .travis/travis_id_rsa -d
+- cp .travis/travis_id_rsa  ~/.ssh/id_rsa
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - cp .travis/ssh_config ~/.ssh/config
